Bug 1698705 - Fix bogus block-frame check in GetRangeForFrame. r=saschanaz

What the rest of the selection code uses is IsBlockOutside, which is the
right thing to do here.

Differential Revision: https://phabricator.services.mozilla.com/D108619