layout/generic/nsIFrame.cpp
@@ -5152,7 +5152,7 @@ static FrameContentRange GetRangeForFrame(const nsIFrame* aFrame) {
   }
 
   nsIContent* parent = content->GetParent();
-  if (aFrame->IsBlockFrameOrSubclass() || !parent) {
+  if (aFrame->IsBlockOutside() || !parent) {
     return FrameContentRange(content, 0, content->GetChildCount());
   }
 
